Change History
==============

0.3 - Unreleased
----------------
- auto discovery?
- refactor dispatchers?

0.2 - 2014-10-06
----------------
- python3 support

0.1 - 2014-10-04
----------------
- Initial release.